--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   string_similarity: ^2.1.1
   cached_network_image: ^3.4.1
   html: ^0.15.0
+  image: ^4.1.7
   mobile_scanner: ^6.0.10
 
   # The following adds the Cupertino Icons font to your application.
